--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = []
 [dependency-groups]
 dev = [
     "pytest",
+	"msgspec",
 	"pytest-xdist",
     "ruff",
     "pytest-timeout",
@@ -96,4 +97,3 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 exclude = ["features"]
-
