feat(stilyagi): add install subcommand to configure Vale with latest release
Introduce a new 'install' command to the stilyagi CLI that fetches the latest
GitHub release metadata for a given repository and updates the .vale.ini file
accordingly. This command rewrites the Packages entry to point to the latest
Concordat release ZIP, sets MinAlertLevel to warning, preserves or defaults the
StylesPath, and adds typical Concordat configuration blocks. Also update docs
and Makefile to integrate the new install workflow, plus tests and a feature
scenario to verify proper installation behavior.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/.vale.ini
+++ b/.vale.ini
@@ -1,7 +1,22 @@
 StylesPath = .vale/styles
-MinAlertLevel = suggestion
-Packages = dist/concordat-dev.zip
+Packages = https://github.com/leynos/concordat-vale/releases/download/v0.1.0/concordat-0.1.0.zip
+MinAlertLevel = warning
 Vocab = concordat
 
-[*.{md,adoc,txt}]
+[docs/**/*.{md,markdown,mdx}]
 BasedOnStyles = concordat
+# Ignore for footnotes
+BlockIgnores = (?m)^\[\^\d+\]:[^\n]*(?:\n[ \t]+[^\n]*)*
+
+[AGENTS.md]
+BasedOnStyles = concordat
+
+[*.{rs,ts,js,sh,py}]
+BasedOnStyles = concordat
+concordat.RustNoRun = NO
+concordat.Acronyms = NO
+
+# README.md may use first/second person pronouns
+[README.md]
+BasedOnStyles = concordat
+concordat.Pronouns = NO
