feat(install): support structured post_sync_steps as action tables
Convert install.post_sync_steps from a list of shell command strings to a list of tables describing trusted actions. Currently only 'update-tengo-map' actions are supported, rendering fixed commands with validated parameters instead of arbitrary shell injection. This improves manifest parsing safety and extensibility.

- Added action table parsing with strict type and value checks in _parse_post_sync_steps_list
- Updated docs and examples to reflect new structured format
- Adjusted tests to cover new parsing logic and validation errors
- Updated stilyagi.toml and user guide examples

BREAKING CHANGE: post_sync_steps format changed from list of shell command strings to list of tables with defined fields.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/stilyagi.toml
+++ b/stilyagi.toml
@@ -2,6 +2,9 @@
 style_name = "concordat"
 vocab = "concordat"
 min_alert_level = "warning"
-post_sync_steps = [
-  "if [ -f .config/common-acronyms ]; then uv run stilyagi update-tengo-map --source .config/common-acronyms --dest .vale/styles/config/scripts/AcronymsFirstUse.tengo; fi",
-]
+
+[[install.post_sync_steps]]
+action = "update-tengo-map"
+type = "true"
+source = ".config/common-acronyms"
+dest = ".vale/styles/config/scripts/AcronymsFirstUse.tengo"
