--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,9 @@
 ---
 name: release
 
+env:
+  STILYAGI_SOURCE: https://github.com/leynos/stilyagi.git@v0.1.0
+
 on:
   release:
     types:
@@ -27,6 +30,7 @@ jobs:
     env:
       UV_CACHE_DIR: .uv-cache
       UV_TOOL_DIR: .uv-tools
+      STILYAGI_SOURCE: ${{ env.STILYAGI_SOURCE }}
     steps:
       - name: Check out repository
         uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955
@@ -117,8 +121,7 @@ jobs:
         run: |
           set -euo pipefail
           archive_path="$(
-            uvx --from https://github.com/leynos/stilyagi.git \
-              stilyagi zip \
+            uvx --from "${STILYAGI_SOURCE}" stilyagi zip \
               --archive-version "${{ steps.meta.outputs.version }}" \
               --force
           )"
