Docs: clarify external stilyagi usage and uvx invocation flow (#15)
* Remove bundled stilyagi tooling

* Pin external stilyagi source and add coverage

* docs(ci): pin stilyagi version in docs to v0.1.0

Updated documentation in stilyagi-design.md and users-guide.md to use the stilyagi CLI with a specific tagged version (@v0.1.0) instead of the unversioned main branch URL. This change improves stability and reproducibility for users by referencing a fixed release in all example commands and workflows.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

* docs(documentation): fix line break and formatting issues in docs

- Correct line breaks and indentation in stilyagi-design.md and users-guide.md
- Improve readability of URLs and command examples
- Ensure consistent paragraph formatting in Markdown files

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

* docs(documentation): align stilyagi source pinning instructions

Keep the pinned `stilyagi` source aligned with every other invocation in this
repository (Makefile, workflow, user guide) so packaging, installation, and
post-sync steps all run against the same release.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

* docs(users-guide): clarify usage example for update-tengo-map command

Improved the explanation of the `update-tengo-map` command in the users-guide.md by splitting the example into two lines and adding the word 'commands' for clarity, emphasizing the intended command execution instead of arbitrary shell injection.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

* docs(documentation): improve formatting and clarity in docs

- Reflowed text in stilyagi-design.md for better readability
- Simplified line wrapping in users-guide.md for clearer instructions
- Minor text adjustments to enhance comprehension

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,9 @@
 ---
 name: release
 
+env:
+  STILYAGI_SOURCE: https://github.com/leynos/stilyagi.git@v0.1.0
+
 on:
   release:
     types:
@@ -117,7 +120,7 @@ jobs:
         run: |
           set -euo pipefail
           archive_path="$(
-            uv run stilyagi zip \
+            uvx --from "${STILYAGI_SOURCE}" stilyagi zip \
               --archive-version "${{ steps.meta.outputs.version }}" \
               --force
           )"
