--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,7 @@ select = [
     "PLR",
 ]
 per-file-ignores = {"**/test_*.py" = ["S101", "PLR2004"]}
-ignore = ["D203", "D213"]
+ignore = ["D203", "D213", "RUF001"]
 
 [tool.ruff.lint.flake8-import-conventions]
 # Declare the banned `from` imports.
