Update Oxford comma rule and test (#16)
* Update Oxford comma rule and test

* Harden Oxford comma heuristic

Rewrite the OxfordComma rule regex in verbose, case-insensitive form to avoid false positives in subordinating clauses and make it maintainable. Add regression tests for 'with or without' and other subordinators, including capitalized variants, and invert assertions for clarity. Scope RUF001 ignore to the Oxford comma tests instead of globally disabling it.

---------

Co-authored-by: Payton McIntosh <pmcintosh@df12.net>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,8 +57,11 @@ select = [
     "C90",
     "PLR",
 ]
-per-file-ignores = {"**/test_*.py" = ["S101", "PLR2004"]}
 ignore = ["D203", "D213"]
+
+[tool.ruff.lint.per-file-ignores]
+"**/test_*.py" = ["S101", "PLR2004"]
+"tests/styles/test_oxford_comma.py" = ["RUF001"]
 
 [tool.ruff.lint.flake8-import-conventions]
 # Declare the banned `from` imports.
