Handle Oxford comma relative clause false positive
Expand the OxfordComma rule exclusions to cover relative clauses starting with which/that, preserving verbose case-insensitive readability. Add a regression test for the 'step definitions, which are then discovered and executed' sentence to ensure the rule no longer misfires.

--- a/styles/concordat/OxfordComma.yml
+++ b/styles/concordat/OxfordComma.yml
@@ -14,7 +14,7 @@ tokens:
       [^,]{1,40},\s            # first item and comma
       (?!                       # exclude clauses that are not lists
         (?:with|without|whether|while|when|where|if|unless|
-           until|because|since|and|or|but|so)\b
+           until|because|since|which|that|and|or|but|so)\b
       )
       [^,]{1,40}(?!,)           # second item without trailing comma
       \s(?:and|or)\s           # coordinator before last item
