Broaden OxfordComma exclusions for relative clauses
Exclude relative pronouns (which/that/who/whom/whose) and allow flexible whitespace after commas to avoid false positives in relative clauses and tight punctuation. Parameterize regression tests across clause leads and add no-space clause coverage to lock in the fix.

--- a/styles/concordat/OxfordComma.yml
+++ b/styles/concordat/OxfordComma.yml
@@ -11,12 +11,12 @@ tokens:
   - |
       (?ix)                     # ignore case, allow comments/whitespace
       \b
-      [^,]{1,40},\s            # first item and comma
+      [^,]{1,60},\s*           # first item and comma
       (?!                       # exclude clauses that are not lists
-        (?:with|without|whether|while|when|where|if|unless|
-           until|because|since|which|that|and|or|but|so)\b
+        \s*(?:with|without|whether|while|when|where|if|unless|
+           until|because|since|which|that|who|whom|whose|and|or|but|so)\b
       )
-      [^,]{1,40}(?!,)           # second item without trailing comma
+      [^,]{1,60}(?!,)           # second item without trailing comma
       \s(?:and|or)\s           # coordinator before last item
-      [^,]{1,40}                # final item
+      [^,]{1,60}                # final item
       (?! (?:\)\s+(?:and|or))) # avoid parenthetical follow-ons
